--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://onedot.join.com/jobs/462868-web-developer-intern'>Job @ Onedot (Schlieren): Web Developer Intern | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AngeionGroup/743999698528265-web-developer'>Angeion Group Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PAUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/catapultsports/jobs/1937028'>Job Application for Senior Full Stack Web Developer at Catapult Sports</a></h5> 
+<h5><a href='https://boards.greenhouse.io/catapultsports/jobs/1937028'>Job Application for Senior Full Stack Web Developer at Catapult Sports</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -149,7 +153,7 @@
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -177,7 +181,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovsFafww&__jvst=Employee&__jvsd=sASKdiwc&__jvsc=Twitter&bid=nMsgnMw8'>Ingram Micro Careers - Senior Web frontend developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovsFafww&__jvst=Employee&__jvsd=sASKdiwc&__jvsc=Twitter&bid=nMsgnMw8'>Ingram Micro Careers - Senior Web frontend developer</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -201,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268852-senior-web-developer'>KSM Consulting Senior Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268852-senior-web-developer'>KSM Consulting Senior Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -241,7 +245,7 @@
 Develop process requirements and implement product development and release
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ObsidianDigital/743999698329025-web-developer'>Obsidian Digital Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ObsidianDigital/743999698329025-web-developer'>Obsidian Digital Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -287,7 +291,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/scaledagile/job/okfpbfwT'>Scaled Agile Careers - Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/scaledagile/job/okfpbfwT'>Scaled Agile Careers - Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -363,7 +367,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhgaVfwm&k=Job&j=okfpbfwT&__jvst=Employee&__jvsd=sPAjBgw4&__jvsc=Twitter&bid=nYellMw9'>Scaled Agile Careers - Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhgaVfwm&k=Job&j=okfpbfwT&__jvst=Employee&__jvsd=sPAjBgw4&__jvsc=Twitter&bid=nYellMw9'>Scaled Agile Careers - Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -389,11 +393,11 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://enmacc.join.com/jobs/456696-senior-java-web-developer-m-f-d'>Job @ Enmacc (Munich): Senior Java Web Developer (... | JOIN</a></h5> 
+<h5><a href='https://enmacc.join.com/jobs/456696-senior-java-web-developer-m-f-d'>Job @ Enmacc (Munich): Senior Java Web Developer (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/innovecs/jobs/4496097002'>Job Application for Middle Web Developer at Innovecs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/innovecs/jobs/4496097002'>Job Application for Middle Web Developer at Innovecs</a></h5> 
 <p><span class="badge badge-light">Kyiv</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -451,10 +455,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p>Posted on: 2019-10-24</p>
 <hr/>
 <h5><a href='https://artisantalent.com/jobs/chicago/senior-project-manager/46183?utm_content=104051083&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
-<p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://artisantalent.com/jobs/other-locations/senior-design-technologist/46170?utm_content=104068951&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
